Fixed swagger, changed api to user_api
