# internal/api/user_v1/get.go
@@ -1,10 +1,10 @@
-package auth_v1
+package user_v1
 
 import (
 	"context"
 
-	converter "github.com/satanaroom/auth/internal/converter/auth"
-	desc "github.com/satanaroom/auth/pkg/auth_v1"
+	converter "github.com/satanaroom/auth/internal/converter/user"
+	desc "github.com/satanaroom/auth/pkg/user_v1"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 )
