# pkg/user_v1/service.pb.validate.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
 // source: service.proto
 
-package auth_v1
+package user_v1
 
 import (
 	"bytes"
